--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 setuptools==38.5.1
-allennlp==0.4.0
+allennlp
 h5py==2.7.1
 numpy==1.14.1
 pandas==0.22.0
 tensorflow==1.4.1
 tqdm==4.19.6
 typing==3.6.4
+matplotlib
+# Unnecessary dependency for allennlp therefore : pip3 install http://download.pytorch.org/whl/cpu/torch-0.3.1-cp35-cp35m-linux_x86_64.whl
