--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ tensorflow==1.4.1
 tqdm==4.19.6
 typing==3.6.4
 matplotlib
+scikit-learn
+scipy
 # Unnecessary dependency for allennlp therefore : pip3 install http://download.pytorch.org/whl/cpu/torch-0.3.1-cp35-cp35m-linux_x86_64.whl
