some minor changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-setuptools==38.5.1
+requests==2.18.4
+glove==1.0.2
 h5py==2.7.1
-numpy==1.14.1
+matplotlib==2.1.2
+numpy==1.14.2
 pandas==0.22.0
-tensorflow==1.4.1
+scikit_learn==0.19.1
+spacy==2.0.8
+tensorboard==1.8.0
+tensorflow-gpu==1.8.0
+tensorflow-tensorboard==0.4.0
 tqdm==4.19.6
 typing==3.6.4
-matplotlib
-scikit-learn
-scipy
-glove-python
-spacy
